Adds sponsor randomization

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <body>
 
     <!-- Navigation -->
-    <!--
+<!--
     <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
     <nav id="sidebar-wrapper">
       <ul class="sidebar-nav">
@@ -77,8 +77,8 @@
           <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
         </li>
       </ul>
-    </nav>
-    -->
+    </nav> -->
+
 
     <!-- Header -->
     <header id="top" class="header">
@@ -194,11 +194,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Tech Midwest 2017 is sponsored by:</h3>
-                    <a href="http://www.kochind.com/" target="_blank" ><img src="/img/logos/KOCH.jpg"></a>
-                    <a href="http://sntmedia.com/" target="_blank" ><img src="/img/logos/SNT.jpg"></a>
-                    <a href="https://www.butlercc.edu/" target="_blank" ><img src="/img/logos/Butler.jpg"></a>
-                    <a href="http://flinthillsgroup.com/" target="_blank" ><img src="/img/logos/FHG.jpg"></a>
-                    <a href="http://www.downtownwichita.org/" target="_blank" ><img src="/img/logos/DowntownWichita.jpg"></a>
+                    <div id="sponsors"></div>
 
                 </div>
             </div>
@@ -525,6 +521,7 @@
       // Enable map zooming with mouse scroll when the user clicks the map
       $('.map').on('click', onMapClickHandler);
     </script>
+    <script src="./js/sponsors.js"></script>
 
   </body>
 
