Adds Lawn Buddy and Quickdraw to Showcase. Randomizes sponsor images

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>Tech Midwest 2017 is sponsored by:</h3>
-                    <div id="sponsors"></div>
+                    <div class="row" id="sponsors"></div>
 
                 </div>
             </div>
@@ -358,6 +358,20 @@
             <a class="btn btn-dark" target="_blank" href="https://www.linkedin.com/company/visibility-optics-llc">LinkedIn</a> <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/visibilityoptics">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/visibilityoptic">Twitter</a>
             <p>
               Visibility Optics creates a truly unique eyewear buying and patient education experience through the use of computer vision and patient specific eye care data.
+            </p>
+            <hr>
+            <img class="headshot" src="/img/logos/LogoSquareW_text.png">
+            <h3><a target="_blank" href="http://quickdrawtrivia.com/">Quickdraw Studios</a></h3>
+            <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/QuickdrawTrivia">Facebook</a>
+            <p>
+              Quickdraw Studios is a video game marketing firm helping businesses achieve their goals through gamification. Our flagship product is a live trivia software. We have also created websites, built rewards programs, and built custom arcade games like Brewery War, which can be played at Hopping Gnome brewery. We've even published a VR title, Space Slam, on steam! We are team of six passionate video game lovers hoping to bring a booming industry to the Midwest.
+            </p>
+            <hr>
+            <img class="headshot" src="/img/logos/Lawn_buddy.jpg">
+            <h3><a target="_blank" href="https://www.getlawnbuddy.com">Lawn Buddy</a></h3>
+            <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/lawnbuddyict">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/lawnbuddyict">Twitter</a>
+            <p><br>
+              Lawn Buddy is a mobile platform that connects professional lawn care provider directly to Homeowners through the touch of a button. Mow your lawn from anywhere with Lawn Buddy.
             </p>
             <h3>More to come...</h3>
           </div>
