--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
               Quickdraw Studios is a video game marketing firm helping businesses achieve their goals through gamification. Our flagship product is a live trivia software. We have also created websites, built rewards programs, and built custom arcade games like Brewery War, which can be played at Hopping Gnome brewery. We've even published a VR title, Space Slam, on steam! We are team of six passionate video game lovers hoping to bring a booming industry to the Midwest.
             </p>
             <hr>
-            <img class="headshot" src="/img/logos/Lawn_buddy.jpg">
+            <img class="headshot" src="/img/logos/Lawn_Buddy.jpg">
             <h3><a target="_blank" href="https://www.getlawnbuddy.com">Lawn Buddy</a></h3>
             <a class="btn btn-dark" target="_blank" href="http://www.facebook.com/lawnbuddyict">Facebook</a> <a class="btn btn-dark" target="_blank" href="http://www.twitter.com/lawnbuddyict">Twitter</a>
             <p><br>
