Post lightning talks

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <strong>Lightning Talks</strong>
                   </h4>
                   <p>Short and powerful, these talks from community. They can be about anything tech, and you should talk about your passion.</p>
-                  <button data-toggle="modal" data-target="#coming-soon" class="button btn btn-light">Speakers</button>
+                  <button data-toggle="modal" data-target="#lightning-talks" class="button btn btn-light">Speakers</button>
                   <a href="https://goo.gl/forms/lf92mJvm2jnxVS4G3" class="btn btn-light">Apply</a>
                 </div>
               </div>
@@ -214,7 +214,7 @@
               <li>Noon - Doors Open, Registraion, and Check In <br /> Showcase opens</li>
               <li>12:30 PM - Kickoff with Keynote from <a href data-toggle="modal" data-target="#mark-williams">Mark Williams</a></li>
               <li>1:30 PM - <a href data-toggle="modal" data-target="#hackathon-info">Hackathon</a> begins</li>
-              <li>4:30 PM - <a href data-toggle="modal" data-target="#coming-soon">Lightning Talks</a></li>
+              <li>4:30 PM - <a href data-toggle="modal" data-target="#lightning-talks">Lightning Talks</a></li>
               <li>7:00 PM - Showcase closes</li>
             </ul>
           </div>
@@ -396,6 +396,39 @@
       </div>
     </div>
 
+    <!-- Lightning Talks #lightning-talks Modal -->
+    <div class="modal fade" tabindex="-1" role="dialog" id="lightning-talks">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h2 class="modal-title">Lightning Talks</h2>
+          </div>
+          <div class="modal-body">
+            <p>
+              Lightning talks are short and powerful informative talks from your fellow Wichita community members! The topics will range
+              from company culture to code examples and everything in between.
+            </p>
+
+            <p><strong>Lightning Talks will be happening at 4:30pm on Saturday June 3, upstairs at The Boathouse.</strong></p>
+
+            <p>Here's the lineup!</p>
+
+            <ul>
+              <li>MVP: The power of starting small - Jason Toevs</li>
+              <li>Starting an Online Venture with Bootstrap Financing - Cari Anne Cashon</li>
+              <li>Possibly Building custom skills with Amazon Echo? - Ben Burrus</li>
+              <li>How to choose a license for your open source project - Jacob Moore</li>
+              <li>The future of Information Security Awareness - Devin Crumrine</li>
+              <li>Bitcoin and cryptocurrency for beginners - Allen Clouse</li>
+              <li>Custom Engineering Teams - Mark Metz</li>
+              <li>Diversity: An Essential Component for Healthy Technology Ecosystems - Brock Brown</li>
+              <li>Leveraging the ICT Tech Community - Dave Cunningham</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Hackathon Info Modal -->
     <div class="modal fade" tabindex="-1" role="dialog" id="hackathon-info">
